--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "svelte-app",
+  "name": "karban-board",
   "version": "1.0.0",
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "dev": "HOST=0.0.0.0 PORT=3000 rollup -c -w",
     "start": "sirv public",
     "validate": "svelte-check"
   },
@@ -24,6 +24,7 @@
     "@tsconfig/svelte": "^1.0.0"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "sirv-cli": "^1.0.0"
   }
 }
