--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
-/node_modules/
-/src/node_modules/@sapper/
+node_modules/
+node_modules/@sapper/
 yarn-error.log
-/__sapper__/
+__sapper__
+.env
