--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,15 @@
   "name": "karban-server",
   "version": "1.0.0",
   "description": "A Express js api server for karban client",
-  "main": "index.js",
+  "main": "app.js",
   "repository": "https://github.com/bineetNaidu/karban",
   "author": "BineetNaidu <bineet.s.naidu@gmail.com> (https://bineetnaidu-io.web.app)",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "start": "node ./build/app",
+    "dev": "nodemon ./src/app"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
