--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.5.0",
     "helmet": "^4.4.1",
     "mongoose": "^5.11.13",
     "morgan": "^1.10.0"
