--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "karban-server",
   "version": "1.0.0",
   "description": "A Express js api server for karban client",
-  "main": "app.js",
+  "main": "app.ts",
   "repository": "https://github.com/bineetNaidu/karban",
   "author": "BineetNaidu <bineet.s.naidu@gmail.com> (https://bineetnaidu-io.web.app)",
   "license": "MIT",
@@ -29,6 +29,7 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.22",
     "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
