--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
     "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
     "uuid": "^8.3.2"
   },
@@ -28,6 +29,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.22",
     "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7",
