--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.6",
+    "@apollo/client": "^3.3.18",
+    "graphql": "^15.5.0",
+    "next": "^10.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
