--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   ],
   "description": "A Kanban board is one of the tools that can be used to implement Kanban to manage work at a personal or organizational level.",
   "scripts": {
-    "build": "lerna run build"
+    "build": "lerna run build",
+    "dev:server": "npm run dev --prefix packages/server",
+    "dev:client": "npm run dev --prefix packages/client",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" "
   },
   "repository": {
     "type": "git",
@@ -20,6 +23,7 @@
   },
   "homepage": "https://github.com/bineetNaidu/karban#readme",
   "devDependencies": {
+    "concurrently": "^6.1.0",
     "lerna": "^4.0.0"
   }
 }
