--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,22 +13,16 @@
     "build": "tsc"
   },
   "dependencies": {
+    "apollo-server": "^2.24.0",
     "bcrypt": "^5.0.0",
-    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
-    "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/cors": "^2.8.9",
-    "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.22",
     "@types/uuid": "^8.3.0",
