--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,20 +13,26 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/express-session": "^1.17.3",
+    "@types/passport-github2": "^1.2.4",
     "apollo-server": "^2.24.0",
     "apollo-server-express": "^2.24.0",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
+    "passport": "^0.4.1",
+    "passport-github2": "^0.1.12",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.22",
+    "@types/passport": "^1.0.6",
     "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
