🐇 update env.sample

--- a/packages/server/.env.sample
+++ b/packages/server/.env.sample
@@ -2,3 +2,6 @@ MONGO_URI=mongodb://localhost:27017/karban
 NODE_ENV="development"
 PORT=< your PORT here >
 JWT_SECRET= < your JWT_SECRET here > 
+KARBAN_GITHUB_CLIENT_ID= < fill up >
+KARBAN_GITHUB_CLIENT_SECRET= < fill up >
+KARBAN_GITHUB_CALLBACK_URL=http://localhost:4242/api/v1/auth/github/callback
