--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "description": "A Express js api server for karban client",
   "main": "app.ts",
   "repository": "https://github.com/bineetNaidu/karban",
-  "author": "BineetNaidu <bineet.s.naidu@gmail.com> (https://bineetnaidu.github.io)",
+  "author": "BineetNaidu <bineet.s.naidu@gmail.com> (https://bineetnaidu-io.web.app)",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -13,24 +13,26 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/express-session": "^1.17.3",
+    "@types/passport-github2": "^1.2.4",
+    "apollo-server": "^2.24.0",
+    "apollo-server-express": "^2.24.0",
     "bcrypt": "^5.0.0",
-    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "express-graphql": "^0.12.0",
+    "express-session": "^1.17.1",
     "graphql": "^15.5.0",
-    "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
+    "passport": "^0.4.1",
+    "passport-github2": "^0.1.12",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/cors": "^2.8.9",
-    "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.22",
+    "@types/passport": "^1.0.6",
     "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
