--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.3.18",
     "graphql": "^15.5.0",
     "next": "^10.2.0",
+    "next-apollo": "^5.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
