--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,6 +18,7 @@
     "apollo-server": "^2.24.0",
     "apollo-server-express": "^2.24.0",
     "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.10",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.22",
     "@types/passport": "^1.0.6",
