--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,8 +14,7 @@
     "next": "^10.2.0",
     "next-apollo": "^5.0.4",
     "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "zustand": "^3.5.1"
+    "react-dom": "17.0.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.21.5",
