--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,6 +19,7 @@
     "apollo-server": "^2.24.0",
     "apollo-server-express": "^2.24.0",
     "bcrypt": "^5.0.0",
+    "connect-mongo": "^4.4.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
