--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,7 +17,7 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "1.21.5",
+    "@graphql-codegen/cli": "^2.0.1",
     "@graphql-codegen/typescript": "1.22.1",
     "@graphql-codegen/typescript-operations": "1.18.0",
     "@graphql-codegen/typescript-react-apollo": "2.2.5",
