--- a/packages/server/.env.sample
+++ b/packages/server/.env.sample
@@ -1,8 +1,5 @@
 MONGO_URI=mongodb://localhost:27017/karban
 NODE_ENV="development"
 PORT=< your PORT here >
-JWT_SECRET= < your JWT_SECRET here > 
+SESSION_SECRET= < your SESSION_SECRET here > 
 NEXT_PUBLIC_URL=http://localhost:3000
-KARBAN_GITHUB_CLIENT_ID= < fill up >
-KARBAN_GITHUB_CLIENT_SECRET= < fill up >
-KARBAN_GITHUB_CALLBACK_URL=http://localhost:4242/api/v1/auth/github/callback
