--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,7 +14,6 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@types/express-session": "^1.17.3",
     "apollo-server": "^2.24.0",
     "apollo-server-express": "^2.24.0",
     "bcrypt": "^5.0.0",
@@ -24,16 +23,13 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.13",
-    "uuid": "^8.3.2"
+    "mongoose": "^5.11.13"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.10",
-    "@types/jsonwebtoken": "^8.5.0",
+    "@types/express-session": "^1.17.4",
     "@types/node": "^14.14.22",
-    "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
