--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.18",
+    "@chakra-ui/react": "^1.6.6",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "framer-motion": "^4.1.17",
     "graphql": "^15.5.0",
     "next": "^10.2.0",
     "next-apollo": "^5.0.4",
