--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,13 +23,13 @@
   "author": "<Your Name>",
   "license": "MIT",
   "dependencies": {
-    "@typegoose/typegoose": "^7.6.3",
+    "@typegoose/typegoose": "^9.4.0",
     "apollo-server": "^2.25.0",
     "argon2": "^0.28.2",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.0",
-    "mongoose": "5.10.18",
+    "mongoose": "^5.10.18",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   },
@@ -37,6 +37,7 @@
     "@types/jest": "^27.0.2",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.10.5",
+    "@types/validator": "^13.7.1",
     "apollo-server-testing": "^2.25.2",
     "jest": "^27.0.6",
     "mongodb-memory-server": "^7.3.2",
